--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,10 +5,7 @@
         <ion-list no-lines>
             <ion-item-sliding >
               <ion-item color="secondary">
-                <ion-avatar item-start>
-                  <img src="assets/img/perfil.jpg" style="height: 50px; width: 50px;box-shadow:0 0 5px #52a780">
-                </ion-avatar>
-                <h2>{{rol}}</h2>
+                <h2>{{empresa }} - {{rol}}</h2>
                 <p>{{nombre}}</p>
               </ion-item> 
             </ion-item-sliding>
