--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,8 +40,12 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   pesto-primary: #009688,
-  pesto-dark: #00AA8D,
-  pesto-light: #FFB74D
+  pesto-dark: #00796D,
+  pesto-light: #B2DFDB,
+  pesto-secondary: #4CAF50,
+  pesto-primary-text: #212121,
+  pesto-scondary-text: #757575,
+  pesto-divider: #BDBDBD
 );
 
 
