--- a/src/pages/formularios/formularios.scss
+++ b/src/pages/formularios/formularios.scss
@@ -27,6 +27,27 @@ page-formularios {
     }
   }
 
-
+ 
+    .progress-outer {
+        width: 96%;
+        margin: 5px 2%;
+        padding: 1px;
+        text-align: center;
+        background-color: #f4f4f4;
+        border: 1px solid #dcdcdc;
+        color: #fff;
+        border-radius: 20px;
+    }
+ 
+    .progress-inner {
+        min-width: 5%;
+        white-space: nowrap;
+        overflow: hidden;
+        padding: 2px;
+        border-radius: 20px;
+        background-color: map-get($colors, pesto-light);
+    
+ 
+}
       
 }
