pruebas ionic pro

--- a/src/pages/formularios/formularios.scss
+++ b/src/pages/formularios/formularios.scss
@@ -23,7 +23,7 @@ page-formularios {
     
   .cuerpotabla{
     td{
-      padding:5px;border: 2px solid rgba(0, 0, 0, 0.08);
+      padding:5px;border: 2px solid rgba(0, 0, 0, 0.08);min-width:100px;
     }
   }
 
